--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
 PORT=8000
 CORS_ORIGIN=*
 MONGODB_URI = mongodb+srv://dheeraj616521:dheeraj123@dheeraj.gyqf83e.mongodb.net
+ACCESS_TOKEN_SECRET=chai-aur-backend
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=chai-aur-code
+REFRESH_TOKEN_EXPIRY=10d
+
