configure cloudinary and added multer middleware

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,14 @@
 PORT=8000
 CORS_ORIGIN=*
+
 MONGODB_URI = mongodb+srv://dheeraj616521:dheeraj123@dheeraj.gyqf83e.mongodb.net
+
 ACCESS_TOKEN_SECRET=chai-aur-backend
 ACCESS_TOKEN_EXPIRY=1d
+
 REFRESH_TOKEN_SECRET=chai-aur-code
 REFRESH_TOKEN_EXPIRY=10d
 
+CLOUDINARY_CLOUD_NAME=dsw8xftys
+CLOUDINARY_API_KEY=763954971855292
+CLOUDINARY_API_SECRET=hNeIrP7jvKrwTSccW5z7KAHVmkA
